# BlueWhiteProject

./: CMakeLists.txt  README.md  main.cpp
include/Communication/: CommunicationIF.h  DummyCommunication.h  UdpCommunication.h
include/Implement/: Implement.h  ImplementBase.h  ImplementIF.h  ImplementTypes.h  Rs422Implement.h  UdpImplement.h
include/ImplementModule/: ImplementModule.h  ImplementModuleIF.h  ImplementModuleMsg.h
src/Communication/: UdpCommunication.cpp
src/Implement/: ImplementBase.cpp  UdpImplement.cpp
src/ImplementModule/: ImplementModule.cpp
